 - (dtucker) [openbsd-compat/readpassphrase.c] Update to OpenBSD's r1.22.    Fixes bz #1590, where sometimes you could not interrupt a connection while    ssh was prompting for a passphrase or password.